# Sesyjka

./: .gitattributes  .gitignore  FLATHUB.md  FUNCTIONALITY_AUDIT.md  LICENSE  MIGRATION_AUDIT.md  NOTICE.md  README.en.md  README.md  install-linux.sh  main.py  pyproject.toml  requirements.txt  run.sh  uninstall-linux.sh
.github/workflows/: ci.yml  release.yml
data/: io.github.zuraffpl.Sesyjka.desktop  io.github.zuraffpl.Sesyjka.metainfo.xml
flatpak/: build-local.sh  io.github.zuraffpl.Sesyjka.yml  python3-openpyxl.json
packaging/: README.md  build-deb.sh  build-generic.sh  build-rpm.sh  common.sh
packaging/rpm/: sesyjka.spec.in
sesyjka/: __init__.py  __main__.py  app.py  config.py  database_manager.py  dialogs.py  logging_setup.py  repository.py  transfer.py  updater.py  validation.py  widgets.py
sesyjka/pages/: __init__.py  base.py  board_games.py  players.py  publishers.py  sessions.py  statistics.py  systems.py
tests/: test_application_source.py  test_flatpak_packaging.py  test_release_packaging.py  test_repository.py  test_updater.py  test_validation.py
